# Scriptum

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Fonetik Lang.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
compilador/: .gitignore  Cargo.toml  README.md  scriptum.toml
compilador/crates/ast/: Cargo.toml
compilador/crates/ast/src/: lib.rs
compilador/crates/cli/: Cargo.toml
compilador/crates/cli/src/: main.rs
compilador/crates/codegen/: Cargo.toml
compilador/crates/codegen/src/: emit.rs  ir.rs  lib.rs  lowering.rs  optimizer.rs
compilador/crates/lexer/: Cargo.toml
compilador/crates/lexer/src/: dfa.rs  keywords.rs  lexer.rs  lib.rs  operators.rs  tokens.rs
compilador/crates/parser/: Cargo.toml
compilador/crates/parser/src/: ast_builder.rs  grammar.rs  lib.rs  ll1.rs
compilador/crates/runtime/: Cargo.toml
compilador/crates/runtime/src/: bytecode.rs  lib.rs  loader.rs  vm.rs
compilador/crates/semantic/: Cargo.toml
compilador/crates/semantic/src/: lib.rs  semantic_pass.rs  symbol_table.rs  type_system.rs
compilador/crates/utils/src/: diagnostics.rs  errors.rs  lib.rs
compilador/docs/: arquitetura.md  especificacao-linguagem.md
compilador/examples/avancados/: jogo_da_velha.stm  sistema_bancario.stm
compilador/examples/basicos/: condicionais.stm  funcoes.stm  variaveis.stm
compilador/examples/intermediarios/: classes.stm  heranca.stm
compilador/fixtures/programas_com_erro/: erro_lexico.stm  erro_semantico.stm  erro_sintatico.stm
compilador/fixtures/programas_validos/: calculadora.stm  fibonacci.stm  hello_world.stm
compilador/scripts/: generate_docs.sh
compilador/tests/: codegen_test.rs  lexer_test.rs  parser_test.rs  programs.rs  sema_test.rs
compilador/tools/: grammar_validator.rs  table_gen.rs
crates/scriptum-ast/: Cargo.toml
crates/scriptum-ast/src/: lib.rs
crates/scriptum-ast/tests/: ast_cases.rs
crates/scriptum-cli/: Cargo.toml
crates/scriptum-cli/src/: main.rs
crates/scriptum-codegen/: Cargo.toml
crates/scriptum-codegen/src/: lib.rs
crates/scriptum-codegen/tests/: codegen_cases.rs
crates/scriptum-ir/: Cargo.toml
crates/scriptum-ir/src/: lib.rs
crates/scriptum-ir/tests/: ir_cases.rs
crates/scriptum-lexer/: Cargo.toml
crates/scriptum-lexer/src/: keywords.rs  lexer.rs  lib.rs  tokens.rs
crates/scriptum-lexer/tests/: lexer_cases.rs
crates/scriptum-parser/: Cargo.toml
crates/scriptum-parser/src/: lib.rs
crates/scriptum-parser/tests/: parser_cases.rs
crates/scriptum-parser/tests/snapshots/: parser_cases__parser_err__negativos__tipo_incompativel.snap.new  parser_cases__parser_ok__avancados__jogo_da_velha.snap.new
crates/scriptum-types/: Cargo.toml
crates/scriptum-types/src/: lib.rs
crates/scriptum-types/tests/: type_cases.rs
crates/scriptum-types/tests/support/: mod.rs
crates/scriptum-utils/: Cargo.toml
crates/scriptum-utils/src/: errors.rs  source_map.rs  span.rs
docs/: grammar.md
docs/dev_logs/: streams-buffers-e-estruturas-de-dados-do-lexer.md
docs/diagramas/: afd_final.md  afd_identificadores.md  afd_numeros.md  afd_operadores.md
docs/diagrams/: pipeline.mmd
docs/wiki/: 00_index.md  01_gramatica.md  02_lexico.md  03_parser.md  04_ast.md  05_tipos_semantica.md  06_ir_codegen.md  07_fluxo_compilador.md  08_lexer_pipeline.md  09_parser_ast_pipeline.md  10_semantica_pipeline.md  11_afn_afd.md  99_release_template.md  99_roadmap.md
examples/: hello.stm
examples/err/: type_mismatch.stm  use_before_decl.stm
examples/negativos/: tipo_incompativel.stm
examples/ok/: control_flow.stm  loops_and_funcs.stm
hooks/: hook-scriptum.py
lexer_automata/: Cargo.toml
lexer_automata/src/: core.rs  lib.rs
lexer_automata/tests/: automata_tests.rs
scripts/: build_afd.py  build_release.sh  dev_commit.sh  install.ps1  install.sh  smoke_local.ps1  smoke_local.sh
scriptum/: Cargo.toml  README.md  pyproject.toml
scriptum/crates/cli/: Cargo.toml
scriptum/crates/cli/src/: main.rs
scriptum/crates/lexer/: Cargo.toml  README.md
scriptum/crates/lexer/diagrams/: afd.md
scriptum/crates/lexer/src/: charclass.rs  dfa.rs  hopcroft.rs  lexer.rs  lib.rs  main.rs  nfa.rs  pipeline.rs  regex_ast.rs  regex_parse.rs  spec.rs  subset.rs
scriptum/crates/lexer/src/tokens/: build.rs  mod.rs  token_spec.rs  types.rs
scriptum/crates/lexer/tests/: hopcroft_test.rs  lexer_test.rs  tokens_test.rs
scriptum/examples/: programa.scriptum
scriptum/scripts/: build_afd.py  dev_commit.sh
scriptum/src/scriptum/: __init__.py  cli.py  driver.py  errors.py  text.py  tokens.py
scriptum/src/scriptum/ast/: nodes.py  visitors.py
scriptum/src/scriptum/codegen/: __init__.py  emitter.py
scriptum/src/scriptum/ir/: __init__.py  interpreter.py  ir.py  lowering.py
scriptum/src/scriptum/lexer/: afn_to_afd.py  generator.py  lexer.py  spec.py  tables.json
scriptum/src/scriptum/parser/: parser.py  precedence.py
scriptum/src/scriptum/regex/: ast.py  builder.py  dfa.py  nfa.py  parser.py
scriptum/src/scriptum/sema/: analyzer.py  symbols.py  types.py
scriptum/tests/: test_cli_commands.py  test_codegen_formatter.py  test_dfa_minimization.py  test_examples_smoke.py  test_lexer_errors.py  test_lexer_tokens.py  test_parser_examples.py  test_parser_precedence.py  test_parser_smoke.py  test_regex_limits.py  test_semantics.py
scriptum/tests/fixtures/fmt/: collections_expected.stm  collections_input.stm  loops_expected.stm  loops_input.stm
scriptum/tests/fixtures/ir/: loops.json
scriptum/tests/fixtures/programs/: error_sema.stm  main_return.stm
src/ll1calc/: __init__.py  first_follow.py  lexer.py  ll1_table.py  parser.py
src/scriptum/: __init__.py  __main__.py  cli.py  driver.py  text.py
src/scriptum/lexer/: lexer.py  (+3 more)
tests/: codegen_test.rs  lexer_test.rs  parser_cases.rs  parser_test.rs  programs.rs  sema_test.rs  test_cli_commands.py  test_ir_lowering.py  test_lexer_tokens.py  test_ll1_crosscheck.py  test_parser.py  test_parser_instrumentation.py  test_parser_limits.py  test_parser_smoke.py  test_semantics.py  test_text_utils.py
(+48 files in other folders)
