[workspace]
members = [
    "crates/scriptum-utils",
    "crates/scriptum-ast",
    "crates/scriptum-lexer",
    "crates/scriptum-parser",
    "crates/scriptum-types",
    "crates/scriptum-ir",
    "crates/scriptum-codegen",
    "crates/scriptum-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Equipe Scriptum"]

[workspace.dependencies]
ahash = "0.8"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
memchr = "2"
miette = { version = "7", features = ["fancy"] }
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
thiserror = "1"
rayon = "1"
once_cell = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
