[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptum"
version = "0.3.1"
description = "Scriptum language toolchain (lexer, parser, sema; standalone builds)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scriptum Team" }]
dependencies = [
    "click>=8.1",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
scriptum = "scriptum.driver:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
scriptum = ["**/*.json", "**/*.txt", "**/*.tbl", "data/**/*", "lexer/**/*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
