[workspace]
members = [
  "crates/ast",
  "crates/lexer",
  "crates/parser",
  "crates/semantic",
  "crates/codegen",
  "crates/runtime",
  "crates/utils",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Scriptum Team"]

[workspace.dependencies]
ahash = "0.8"
indexmap = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
bumpalo = "3"
memchr = "2"
regex = "1"
thiserror = "1"
miette = { version = "7", features = ["fancy"] }
ariadne = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true


