[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptum"
version = "0.1.0"
description = "Compiler for the Scriptum language."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Scriptum Team" }]
dependencies = [
    "click>=8.1",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
scriptum = "scriptum.cli:main"

[tool.setuptools]
package-dir = { "" = "scriptum/src" }

[tool.setuptools.packages.find]
where = ["scriptum/src"]
exclude = ["tests", "tests.*"]
