[package]
name = "scriptum-ast"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-utils = { path = "../scriptum-utils" }
indexmap.workspace = true
smallvec.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
scriptum-parser = { path = "../scriptum-parser" }

