[package]
name = "scriptum-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-ast = { path = "../scriptum-ast" }
scriptum-utils = { path = "../scriptum-utils" }
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true
smallvec.workspace = true

[dev-dependencies]
glob = "0.3"
scriptum-parser = { path = "../scriptum-parser" }
pretty_assertions = "1"
insta = { version = "1", features = ["json", "glob"] }

