[package]
name = "scriptum-lexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-utils = { path = "../scriptum-utils" }
ahash.workspace = true
indexmap.workspace = true
memchr.workspace = true
regex.workspace = true
once_cell.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
glob = "0.3"
pretty_assertions = "1"
insta = { version = "1", features = ["json", "glob"] }
proptest = "1"

