[package]
name = "scriptum-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-ast = { path = "../scriptum-ast" }
scriptum-lexer = { path = "../scriptum-lexer" }
scriptum-utils = { path = "../scriptum-utils" }
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
glob = "0.3"
pretty_assertions = "1"
insta = { version = "1", features = ["json", "glob"] }
proptest = "1"

