[package]
name = "scriptum-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-ast = { path = "../scriptum-ast" }
scriptum-utils = { path = "../scriptum-utils" }
indexmap.workspace = true
smallvec.workspace = true
serde.workspace = true
thiserror.workspace = true
