[package]
name = "scriptum-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ariadne.workspace = true
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true
indexmap.workspace = true
smallvec.workspace = true
