[package]
name = "scriptum-lexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-utils = { path = "../utils" }
scriptum-ast = { path = "../ast" }
ahash.workspace = true
indexmap.workspace = true
memchr.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde.workspace = true
