[package]
name = "scriptum-parser-ll"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptum-ast = { path = "../ast" }
scriptum-lexer = { path = "../lexer" }
scriptum-utils = { path = "../utils" }
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
